--- a/jekyll/assets/css/main.scss
+++ b/jekyll/assets/css/main.scss
@@ -2,6 +2,7 @@
 ---
 @import 'variables';
 @import 'sidebar';
+@import 'footer';
 @import 'subnav';
 @import 'instantsearch';
 @import 'tooltip';
@@ -39,9 +40,11 @@ div.main-body{
 
 div.main-body {
 	display: flex;
-	max-width: 1200px;
+	max-width: 1920px;
 	margin: 0 auto;
 	background: #fff;
+  overflow: inherit;
+  flex-direction: column;
 }
 
 .text-center-small-float-right {
@@ -136,6 +139,9 @@ nav.nav-toggle.two {
 	}
 }
 
+div.sidebar-offset {
+  margin-left: $leftbar-width;
+}
 
 // Article
 div.article-container{
@@ -144,8 +150,9 @@ div.article-container{
 		padding: 0 16px 0 16px;
 		width: 100%;
 	}
-	padding: 60px 48px 0 48px;
-	width: calc(100% - 260px);
+	padding: 60px 96px 0 48px;
+	width: calc(100% - #{$rightbar-width});
+  max-width: 60em; // increase readability on large screens.
 }
 	article{
 		h2,
@@ -247,7 +254,7 @@ body.homepage{
       width: 100%;
     }
 	  padding: 60px 48px 0 48px;
-    width: calc(100% - 260px);
+    width: calc(100% - $leftbar-width);
   }
 
 	article{
@@ -454,4 +461,51 @@ pre {
 
 h6{
 	font-size: 16px;
+}
+
+// Table of Contents Sidebar ----------------------------------
+.table-of-contents {
+    position: sticky;
+    right: 0;
+    padding: 32px 32px 112px 12px;
+    background: #ffffff;
+    height: 90vh;
+    width: $rightbar-width;
+    overflow: scroll;
+    top: 118px;
+    font-size: 16px;
+    transition: all 0.5s ease-in-out;
+
+    @media(max-width: $toc-breakpoint) {
+        right: -500px;
+
+        &.open {
+            right: 0px;
+        }
+    }
+
+
+    .toc-heading {
+        margin-left: -2px;
+    }
+
+    .toc-indent {
+      border-left: 2px solid #EEEEEE;
+      a {
+        color: $body-text-color;
+        &:hover {
+          color: $link-text-color;
+        }
+
+      }
+    }
+
+    ul, li {
+        list-style-type: none;
+        padding-left: 12px;
+        margin: 4px 0;
+        &:first {
+            padding-left: 0px;
+        }
+    }
 }
