Fix: Ecs_ecr_updated_072720 (#46)
* minor fix

* Use local favicon, fix cache key error.

* Update ssh-access-jobs.md

Added clarification to the Overview section to make the language more precise and clearly understandable.

* Update Add SSH instructions for new UI

* Update jekyll/_cci2/ssh-access-jobs.md

Co-authored-by: Tyler <teesloane@users.noreply.github.com>

* Eliminate a few more uses of 'whitelist'

* add remote docker 19.03.12

* update literal formatting in PDF and version for Server

* update PDFs

* Update oss.md

Added a note in the "Build Pull Requests From Forked Repositories" section to state that this feature is not currently supported for BitBucket users. This fixes #4554

* add ssh page with image

* Update jekyll/_cci2/SSH-server.adoc

* Update jekyll/_cci2/SSH-server.adoc

* Add: external links + logo link fix.

* try to fix link

* try another fix

* another try

* again again

* changes from Rosejen

* Update jekyll/_cci2/SSH-server.adoc

Co-authored-by: Glen Mailer <glen@circleci.com>

* add script example

* Update skip-build.md

* Add: Api styles and assets to src-crg.

* Fix: broken links.

* Fix repeating word in comment explaining checkout

* remove static install info and direct to support

* [CIRCLE-27918] Add contexts API

* fix url

retrieving jobs in a workflow is `GET /workflow/:id/job`, not `GET /workflow/:id/jobs`

* 11.6 GM

* change title and description

* add to ops guide and rename in all lowercase

* all lowercase for filenames

* 12 Beta 3

* Update ecs-ecr.md

Made minor change from "AWS-REGION" to "AWS-DEFAULT-REGION" to match Amazon's new change to this environment variable. This fixes #4585

Co-authored-by: Rosie Yohannan <rosieyo@gmail.com>
Co-authored-by: Ricardo N Feliciano <FelicianoTech@gmail.com>
Co-authored-by: thomasr8 <thomasr8@gmail.com>
Co-authored-by: Yann <yann.domingo@gmail.com>
Co-authored-by: Tyler <teesloane@users.no

--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -8,7 +8,7 @@
 	{% if page.redirect %}<meta http-equiv="refresh" content="0; url={{ page.redirect }}">{% endif %}
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-	<link href="https://d3r49iyjzglexf.cloudfront.net/favicon-066b37ff00f0f968b903c13ae88b5573b62665aea8fbe91bb61c55dfa9446523.ico" rel="icon" type="image/png" />
+	<link href="{{ "/assets/img/icons/favicon.png" | prepend: site.baseurl }}" rel="icon" type="image/png" />
   <link rel="stylesheet" href="{{ "/assets/css/fonts.css" | prepend: site.baseurl }}" />
   <link rel="stylesheet" href="{{ "/assets/css/site.css" | prepend: site.baseurl }}" />
 	<link rel="stylesheet" href="{{ "/assets/css/spacing.css" | prepend: site.baseurl }}" />
