--- a/src-api/source/layouts/layout.erb
+++ b/src-api/source/layouts/layout.erb
@@ -58,7 +58,7 @@ under the License.
       </span>
     </a>
     <div class="toc-wrapper">
-      <a href="https://circleci.com/docs/">
+      <a href="#">
         <%= image_tag "logo.png", width: '90%',  class: 'logo' %>
       </a>
       <% if language_tabs.any? %>
@@ -106,11 +106,11 @@ under the License.
       <div class="dark-box"></div>
       <div class="content">
         <div class="header-links">
-          <a class="content-link" href="https://circleci.com/docs/2.0">
+          <a class="content-link" target="_blank" href="https://circleci.com/docs/2.0">
             Documentation
             <%= image_tag "new-window.svg", width: '90%',  class: 'new-window' %>
           </a>
-          <a class="content-link" href="https://circleci.com">
+          <a class="content-link" target="_blank" href="https://circleci.com">
             circleci.com
             <%= image_tag "new-window.svg", width: '90%',  class: 'new-window' %>
           </a>
